--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@
 ## => Site Settings
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
+highlight_theme: "tomorrow-night-eighties" # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+url     : https://42cloud.github.io # the base hostname & protocol for your site e.g. https://www.someone.com
+baseurl : /# does not include hostname
 title   : 山月白
-description: > # this means to ignore newlines until "Language & timezone"
-  其生也有涯，其知也无涯
+description: >其生也有涯，其知也无涯 # this means to ignore newlines until "Language & timezone"
+  
 
 ## => Language and Timezone
 ##############################
@@ -199,6 +199,14 @@ exclude:
   - /screenshots
   - /test
   - /vendor
+
+
+collections_dir: my_collections
+collections:
+  books:
+    output: true
+
+  
 
 defaults:
   - scope:
