--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,10 @@
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: "tomorrow-night-eighties" # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : https://42cloud.github.io # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : /# does not include hostname
+baseurl : / # does not include hostname
 title   : 山月白
-description: >其生也有涯，其知也无涯 # this means to ignore newlines until "Language & timezone"
+description: >
+  其生也有涯，其知也无涯 # this means to ignore newlines until "Language & timezone"
   
 
 ## => Language and Timezone
@@ -201,7 +202,6 @@ exclude:
   - /vendor
 
 
-collections_dir: my_collections
 collections:
   books:
     output: true
