--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : https://42cloud.github.io # the base hostname & protocol for your site
 baseurl : / # does not include hostname
 title   : 山月白
 description: >
-  其生也有涯，其知也无涯 # this means to ignore newlines until "Language & timezone"
+  其生也有涯，其知也无涯 
   
 
 ## => Language and Timezone
