--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ pageview:
 ## => Search
 ##############################
 search:
-  provider: default # "default" (default), false, "google", "custom"
+  provider: custom # "default" (default), false, "google", "custom"
 
   ## Google Custom Search Engine
   google:
